welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:9: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
					if (nums(y)==nums(z) && y!=z && z=y+1) {return false}
                                                                     ^