welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
	val n:Int=nums.length.toInt
	var result:Boolean=true
	
	for (x<- 0 to n-1) {
	for (y<- 0 to n-1) {
		if (nums(x)==nums(y) && x!=y && x==y+1) {
				for (z<- 0 to n-1) {
					if (nums(y)==nums(z) && y!=z && z=y+1) {return false}
					else {result=true}
				}
			}
		else {result=true}		
	}
	}
	
	
	return result
}
